--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     }).reduce((a, b) => {
         return a + b;
     }))
-    $("#clock-box-inside-text").html(`${config.names[0]} <span class="STYLE1"> and </span> ${config.names[1]}<span class="STYLE1"> had loved each other for</span>`)
+    $("#clock-box-inside-text").html(`${config.names[0]}==<span class="STYLE1"> and </span> ${config.names[1]}<span class="STYLE1">== had loved each other for</span>`)
 </script>
 
 <script>
